--- a/aboutme.html
+++ b/aboutme.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./piano.css">
+    <link rel="stylesheet" href="./aboutme.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <title>myProject</title>
 </head>
-<body>
+<>
     <header id="header">
         <nav id="navbar">
             <div id="page">
@@ -26,18 +26,31 @@
             </ul>
         </nav>
     </header>
-    <div id="all">
-        <div class="each"><iframe src="https://www.youtube.com/embed/GBTEjwXB0GY" frameborder="0"></iframe></div>
-        <div class="each"><iframe src="https://www.youtube.com/embed/vUxvoieB0fA" frameborder="0"></iframe></div>
-        <div class="each"><iframe src="https://www.youtube.com/embed/zIyTDegX9Bs" frameborder="0"></iframe></div>
-        <div class="each"><iframe src="https://www.youtube.com/embed/--kc3CC1VIY" frameborder="0"></iframe></div>
-        <div class="each"><iframe src="https://www.youtube.com/embed/ez1iu-zx7eE" frameborder="0"></iframe></div>
-        <div class="each"><iframe src="https://www.youtube.com/embed/DDplD0MDmxw" frameborder="0"></iframe></div>
-        <div class="each"><iframe src="https://www.youtube.com/embed/n6GEcdh5whk" frameborder="0"></iframe></div>
-        <div class="each"><iframe src="https://www.youtube.com/embed/E1JKd1C7izQ" frameborder="0"></iframe></div>
-        <div class="each"><iframe src="https://www.youtube.com/embed/qMuKw1NYpjs" frameborder="0"></iframe></div>
+    <div id="prof">
+        <div class="profile">
+            <img src="./bob2.jpg" alt="this is my photo">
+        </div>
+        <div class="profile2">
+            <p>i created this web site to make people found the top music of their favorit instrument without hard searching </p>
+        </div>
     </div>
+
+    <footer id="footer">
+        <h3 id="footer-title">Im Ahmed Bouafif</h3>
+        <p class="desc">The Creator Of This Web Site. And I Hope That You Enjoy My Web Site </p>
+        <form>
+            <input type="email" id="email" placeholder="Your email">
+            <button type="submit">></button>
+        </form>
+        <ul id="social-links">
+            <li class="social-item"><a href="https://www.facebook.com/profile.php?id=100005139885531" class="social-link"><i class="fab fa-facebook-f"></i></a></li>
+            <li class="social-item"><a href="https://twitter.com/home" class="social-link"><i class="fab fa-twitter"></i></a></li>
+            <li class="social-item"><a href="https://www.instagram.com/" class="social-link"><i class="fab fa-instagram"></i></a></li>
+            <li class="social-item"><a href="#" class="social-link"><i class="fab fa-linkedin-in"></i></a></li>
+            <li class="social-item"><a href="#" class="social-link"><i class="fab fa-pinterest-p"></i></a></li>
+        </ul>
+    </footer>
     <script src="./main.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-    </body>
-    </html>
+</body>
+</html>
