--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
             </div>
             <ul id="nav-items">
                 <li class="nav-item"><a href="home.html" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">About Me</a></li>
+                <li class="nav-item"><a href="aboutme.html" class="nav-link">About Me</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Log Out</a></li>
             </ul>
         </nav>
@@ -37,7 +37,7 @@
             <button><a href="guitar.html">Guitar</a></button>
             <button><a href="violin.html">Violin</a></button>
             <button><a href="piano.html">Piano</a></button>
-            <button><a href="#">Saxophone</a></button>
+            <button><a href="saxo.html">Saxophone</a></button>
         </div>
 
 
@@ -45,5 +45,8 @@
 
 
     <script src="./main.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    </body>
+    </html>
 </body>
 </html>
