--- a/violin.html
+++ b/violin.html
@@ -21,7 +21,7 @@
             </div>
             <ul id="nav-items">
                 <li class="nav-item"><a href="home.html" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">About Me</a></li>
+                <li class="nav-item"><a href="aboutme.html" class="nav-link">About Me</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Log Out</a></li>
             </ul>
         </nav>
@@ -37,3 +37,7 @@
         <div class="each"><iframe src="https://www.youtube.com/embed/jERzLseoAOM" frameborder="0"></iframe></div>
         <div class="each"><iframe src="https://www.youtube.com/embed/dsU9zmnZ37g" frameborder="0"></iframe></div>
     </div>
+    <script src="./main.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    </body>
+    </html>
