--- a/login.html
+++ b/login.html
@@ -10,19 +10,15 @@
 <body>
     <form id="login">
         <div id="form">
-            <p>Resgister</p>
+            <p>Login</p>
             <label for="fname">First name:</label>
             <input type="text" id="fname" ><br><br>
             <label for="lname">Last name:</label>
             <input type="text" id="lname" ><br><br>
-            <label for="age">Age:</label>
-            <input type="text" id="age" ><br><br>
-            <label for="email">Email:</label>
-            <input type="email" id="email" ><br><br>
             <label for="password">Password:</label>
             <input type="text" id="password" ><br><br>
     
-            <button id="bob" type="submit"><a href="home.html">Go In</a></button>
+            <button id="bob1" type="submit"><a href="home.html">Go In</a></button>
         </div>
     </form>
     <script
