--- a/saxo.html
+++ b/saxo.html
@@ -22,7 +22,7 @@
             <ul id="nav-items">
                 <li class="nav-item"><a href="home.html" class="nav-link">Home</a></li>
                 <li class="nav-item"><a href="aboutme.html" class="nav-link">About Me</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Log Out</a></li>
+                <li class="nav-item"><a href="./login.html" class="nav-link">Log Out</a></li>
             </ul>
         </nav>
     </header>
@@ -37,7 +37,10 @@
         <div class="each"><iframe src="https://www.youtube.com/embed/T8fzAtwtGuM" frameborder="0"></iframe></div>
         <div class="each"><iframe src="https://www.youtube.com/embed/bIJ1KBOdbX8" frameborder="0"></iframe></div>
     </div>
+    <script
+  src="https://code.jquery.com/jquery-3.6.0.js"
+  integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+  crossorigin="anonymous"></script>
     <script src="./main.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     </body>
     </html>
