--- a/aboutme.html
+++ b/aboutme.html
@@ -12,7 +12,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <title>myProject</title>
 </head>
-<>
+<body>
     <header id="header">
         <nav id="navbar">
             <div id="page">
@@ -22,7 +22,7 @@
             <ul id="nav-items">
                 <li class="nav-item"><a href="home.html" class="nav-link">Home</a></li>
                 <li class="nav-item"><a href="aboutme.html" class="nav-link">About Me</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Log Out</a></li>
+                <li class="nav-item"><a href="./login.html" class="nav-link">Log Out</a></li>
             </ul>
         </nav>
     </header>
@@ -50,7 +50,10 @@
             <li class="social-item"><a href="#" class="social-link"><i class="fab fa-pinterest-p"></i></a></li>
         </ul>
     </footer>
+    <script
+  src="https://code.jquery.com/jquery-3.6.0.js"
+  integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+  crossorigin="anonymous"></script>
     <script src="./main.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 </body>
 </html>
