--- a/home.html
+++ b/home.html
@@ -20,9 +20,9 @@
                 <div id="page-name">Best Songs</div>
             </div>
             <ul id="nav-items">
-                <li class="nav-item"><a href="home.html" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="aboutme.html" class="nav-link">About Me</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Log Out</a></li>
+                <li class="nav-item"><a href="./home.html" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="./aboutme.html" class="nav-link">About Me</a></li>
+                <li class="nav-item"><a href="./login.html" class="nav-link">Log Out</a></li>
             </ul>
         </nav>
     </header>
@@ -44,8 +44,11 @@
 
 
 
-    <script src="./main.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+        <script
+        src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+        crossorigin="anonymous"></script>
+          <script src="./main.js"></script>
     </body>
     </html>
 </body>
