--- a/register.html
+++ b/register.html
@@ -12,7 +12,7 @@
         <div id="form">
             <p>Resgister</p>
             <label for="fname">First name:</label>
-            <input type="text" id="fname" ><br><br>
+            <input type="text" id="fname" ><br><br>r
             <label for="lname">Last name:</label>
             <input type="text" id="lname" ><br><br>
             <label for="age">Age:</label>
@@ -22,7 +22,7 @@
             <label for="password">Password:</label>
             <input type="text" id="password" ><br><br>
     
-            <button id="bob" type="submit"><a href="home.html">Go In</a></button>
+            <button id="bob" type="submit"><a href="./home.html">Go In</a></button>
         </div>
     </form>
     <script
