--- a/login.html
+++ b/login.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./login.css">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>myProject</title>
 </head>
@@ -16,7 +15,7 @@
             <label for="password">Password:</label>
             <input type="text" id="ppassword" ><br><br>
     
-            <button id="bob1" onclick="checkuser()" type="submit">Go In</button>
+            <button id="bob1" type="button">Go In</button>
         </div>
     </form>
     <script
