--- a/register.html
+++ b/register.html
@@ -21,8 +21,9 @@
             <input type="email" id="email" ><br><br>
             <label for="password">Password:</label>
             <input type="text" id="password" ><br><br>
-    
-            <button id="bob" type="submit"><a href="./home.html">Go In</a></button>
+            
+            <button id="account" type="button">I already have account</button>
+            <button id="bob" type="button">Go In</button>
         </div>
     </form>
     <script
