--- a/aboutme.html
+++ b/aboutme.html
@@ -38,16 +38,12 @@
     <footer id="footer">
         <h3 id="footer-title">Im Ahmed Bouafif</h3>
         <p class="desc">The Creator Of This Web Site. And I Hope That You Enjoy My Web Site </p>
-        <form>
-            <input type="email" id="email" placeholder="Your email">
-            <button type="submit">></button>
-        </form>
         <ul id="social-links">
             <li class="social-item"><a href="https://www.facebook.com/profile.php?id=100005139885531" class="social-link"><i class="fab fa-facebook-f"></i></a></li>
             <li class="social-item"><a href="https://twitter.com/home" class="social-link"><i class="fab fa-twitter"></i></a></li>
             <li class="social-item"><a href="https://www.instagram.com/" class="social-link"><i class="fab fa-instagram"></i></a></li>
-            <li class="social-item"><a href="#" class="social-link"><i class="fab fa-linkedin-in"></i></a></li>
-            <li class="social-item"><a href="#" class="social-link"><i class="fab fa-pinterest-p"></i></a></li>
+            <li class="social-item"><a href="https://www.linkedin.com/" class="social-link"><i class="fab fa-linkedin-in"></i></a></li>
+            <li class="social-item"><a href="https://www.pinterest.com/" class="social-link"><i class="fab fa-pinterest-p"></i></a></li>
         </ul>
     </footer>
     <script
